Fix refresh button animation on mobile

--- a/client/src/styles/_utils.scss
+++ b/client/src/styles/_utils.scss
@@ -109,7 +109,6 @@
       margin-top: 1.3rem;
     }
     &:hover {
-      transform: none;
       color: var(--theme-color);
     }
   }
